// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`auth-Seiten — Snapshots vor der Styling-Zusammenfuehrung > login 1`] = `
<div
  class="min-h-screen bg-page flex items-center justify-center px-4"
>
  <div
    class="w-full max-w-md"
  >
    <div
      class="text-center mb-8"
    >
      <div
        class="flex justify-center"
      >
        <img
          alt="Vendora"
          class="h-12 w-auto block dark:hidden"
          src="/vendora_logo_v1_transparent.png"
        />
        <img
          alt="Vendora"
          class="h-12 w-auto hidden dark:block"
          src="/vendora_logo_v2_transparent.png"
        />
      </div>
      <p
        class="text-faint mt-2"
      >
        Melde dich bei deinem Konto an
      </p>
    </div>
    <form
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm text-faint mb-1"
        >
          E-Mail
        </label>
        <input
          class="w-full bg-surface border border-line rounded-lg px-4 py-3 text-primary placeholder-holder focus:outline-none focus:border-brand-primary transition"
          placeholder="deine@email.de"
          required=""
          type="email"
          value=""
        />
      </div>
      <div>
        <label
          class="block text-sm text-faint mb-1"
        >
          Passwort
        </label>
        <input
          class="w-full bg-surface border border-line rounded-lg px-4 py-3 text-primary placeholder-holder focus:outline-none focus:border-brand-primary transition"
          placeholder="••••••••"
          required=""
          type="password"
          value=""
        />
      </div>
      <button
        class="w-full bg-brand-primary hover:bg-brand-primary/90 disabled:opacity-50 text-white font-medium py-3 rounded-lg transition"
        type="submit"
      >
        Anmelden
      </button>
    </form>
    <div
      class="mt-6 text-center space-y-2"
    >
      <a
        class="text-sm text-brand-primary hover:text-brand-primary/80"
        href="/auth/reset-password"
      >
        Passwort vergessen?
      </a>
      <p
        class="text-muted text-sm"
      >
        Noch kein Konto?
         
        <a
          class="text-brand-primary hover:text-brand-primary/80"
          href="/auth/register"
        >
          Registrieren
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`auth-Seiten — Snapshots vor der Styling-Zusammenfuehrung > register 1`] = `
<div
  class="min-h-screen bg-page flex items-center justify-center px-4"
>
  <div
    class="w-full max-w-md"
  >
    <div
      class="text-center mb-8"
    >
      <div
        class="flex justify-center"
      >
        <img
          alt="Vendora"
          class="h-12 w-auto block dark:hidden"
          src="/vendora_logo_v1_transparent.png"
        />
        <img
          alt="Vendora"
          class="h-12 w-auto hidden dark:block"
          src="/vendora_logo_v2_transparent.png"
        />
      </div>
      <p
        class="text-faint mt-2"
      >
        Erstelle dein Konto
      </p>
    </div>
    <form
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm text-faint mb-1"
        >
          E-Mail
        </label>
        <input
          class="w-full bg-surface border border-line rounded-lg px-4 py-3 text-primary placeholder-holder focus:outline-none focus:border-brand-primary transition"
          placeholder="deine@email.de"
          required=""
          type="email"
          value=""
        />
      </div>
      <div>
        <label
          class="block text-sm text-faint mb-1"
        >
          Passwort
        </label>
        <input
          class="w-full bg-surface border border-line rounded-lg px-4 py-3 text-primary placeholder-holder focus:outline-none focus:border-brand-primary transition"
          placeholder="Mindestens 8 Zeichen"
          required=""
          type="password"
          value=""
        />
      </div>
      <div>
        <label
          class="block text-sm text-faint mb-1"
        >
          Passwort bestätigen
        </label>
        <input
          class="w-full bg-surface border border-line rounded-lg px-4 py-3 text-primary placeholder-holder focus:outline-none focus:border-brand-primary transition"
          placeholder="Passwort wiederholen"
          required=""
          type="password"
          value=""
        />
      </div>
      <button
        class="w-full bg-brand-primary hover:bg-brand-primary/90 disabled:opacity-50 text-white font-medium py-3 rounded-lg transition"
        type="submit"
      >
        Konto erstellen
      </button>
    </form>
    <p
      class="mt-6 text-center text-muted text-sm"
    >
      Bereits ein Konto?
       
      <a
        class="text-brand-primary hover:text-brand-primary/80"
        href="/auth/login"
      >
        Anmelden
      </a>
    </p>
  </div>
</div>
`;

exports[`auth-Seiten — Snapshots vor der Styling-Zusammenfuehrung > reset-password 1`] = `
<div
  class="min-h-screen bg-page flex items-center justify-center px-4"
>
  <div
    class="w-full max-w-md"
  >
    <div
      class="text-center mb-8"
    >
      <h1
        class="text-3xl font-bold text-primary font-display"
      >
        Passwort zurücksetzen
      </h1>
      <p
        class="text-faint mt-2"
      >
        Gib deine E-Mail-Adresse ein und wir senden dir einen Reset-Link.
      </p>
    </div>
    <form
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm text-faint mb-1"
        >
          E-Mail
        </label>
        <input
          class="w-full bg-surface border border-line rounded-lg px-4 py-3 text-primary placeholder-holder focus:outline-none focus:border-brand-primary transition"
          placeholder="deine@email.de"
          required=""
          type="email"
          value=""
        />
      </div>
      <button
        class="w-full bg-brand-primary hover:bg-brand-primary/90 disabled:opacity-50 text-white font-medium py-3 rounded-lg transition"
        type="submit"
      >
        Reset-Link senden
      </button>
    </form>
    <p
      class="mt-6 text-center text-muted text-sm"
    >
      <a
        class="text-brand-primary hover:text-brand-primary/80"
        href="/auth/login"
      >
        Zurück zum Login
      </a>
    </p>
  </div>
</div>
`;

exports[`auth-Seiten — Snapshots vor der Styling-Zusammenfuehrung > update-password mit gueltigem Token 1`] = `
<div
  class="min-h-screen bg-page flex items-center justify-center px-4"
>
  <div
    class="w-full max-w-md"
  >
    <div
      class="text-center mb-8"
    >
      <h1
        class="text-3xl font-bold text-primary font-display"
      >
        Neues Passwort
      </h1>
      <p
        class="text-faint mt-2"
      >
        Wähle ein neues Passwort für dein Konto.
      </p>
    </div>
    <form
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm text-faint mb-1"
        >
          Neues Passwort
        </label>
        <input
          class="w-full bg-surface border border-line rounded-lg px-4 py-3 text-primary placeholder-holder focus:outline-none focus:border-brand-primary transition"
          placeholder="Mindestens 8 Zeichen"
          required=""
          type="password"
          value=""
        />
      </div>
      <div>
        <label
          class="block text-sm text-faint mb-1"
        >
          Passwort bestätigen
        </label>
        <input
          class="w-full bg-surface border border-line rounded-lg px-4 py-3 text-primary placeholder-holder focus:outline-none focus:border-brand-primary transition"
          placeholder="Passwort wiederholen"
          required=""
          type="password"
          value=""
        />
      </div>
      <button
        class="w-full bg-brand-primary hover:bg-brand-primary/90 disabled:opacity-50 text-white font-medium py-3 rounded-lg transition"
        type="submit"
      >
        Passwort ändern
      </button>
    </form>
  </div>
</div>
`;

exports[`auth-Seiten — Snapshots vor der Styling-Zusammenfuehrung > update-password ohne Token 1`] = `
<div
  class="min-h-screen bg-page flex items-center justify-center px-4"
>
  <div
    class="w-full max-w-md text-center"
  >
    <div
      class="bg-red-500/10 border border-red-500/20 rounded-xl p-8"
    >
      <h2
        class="text-xl font-bold text-primary mb-2"
      >
        Ungültiger Link
      </h2>
      <p
        class="text-faint"
      >
        Passwort konnte nicht geändert werden. Der Link ist möglicherweise abgelaufen.
      </p>
    </div>
    <a
      class="text-brand-primary hover:text-brand-primary/80 text-sm mt-4 inline-block"
      href="/auth/reset-password"
    >
      Passwort zurücksetzen
    </a>
  </div>
</div>
`;
